--- a/.github/workflows/compile-and-release.yml
+++ b/.github/workflows/compile-and-release.yml
@@ -4,12 +4,13 @@ jobs:
   compile-assets-and-push-release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
       - run: npm ci
       - run: npm run build
+      - run: cp src/assets/payload.json payload.json
       - uses: montudor/action-zip@v1
         with:
           args: zip -qq -r dist.zip dist
@@ -20,3 +21,4 @@ jobs:
           prerelease: false
           files: |
             dist.zip
+            payload.json
