--- a/.github/workflows/compile-and-release.yml
+++ b/.github/workflows/compile-and-release.yml
@@ -10,7 +10,6 @@ jobs:
           node-version: '20'
       - run: npm ci
       - run: npm run build
-      - run: cp src/assets/payload.json payload.json
       - uses: montudor/action-zip@v1
         with:
           args: zip -qq -r dist.zip dist
@@ -21,4 +20,12 @@ jobs:
           prerelease: false
           files: |
             dist.zip
-            payload.json
+      - run: mkdir s3
+      - run: cp src/assets/govdocs.json s3/govdocs.json
+      - uses: shallwefootball/s3-upload-action@master
+        with:
+          aws_key_id: ${{ secrets.AWS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+          aws_bucket: ${{ secrets.AWS_BUCKET }}
+          source_dir: 's3'
+          destination_dir: ''
