--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/typography": "^0.5.15",
     "@vitejs/plugin-vue": "^5.2.1",
-    "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3",
+    "tailwindcss": "^4.1.10",
     "vite": "^6.0.5"
   }
 }
